Draw nav will now be fixed.
This will stop it from scrolling out of view.

--- a/src/assets/css/components/_draw-nav.scss
+++ b/src/assets/css/components/_draw-nav.scss
@@ -1,5 +1,5 @@
 .draw-nav {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
